--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,6 +30,7 @@
 @use 'pages/admin' as admin;
 @use 'pages/dashboard' as dashboard;
 @use 'pages/project' as project;
+@use 'pages/register' as register;
 
 // Utilities (opcjonalnie)
 // @use 'utilities/helpers' as utils;
