--- a/scss/pages/_login.scss
+++ b/scss/pages/_login.scss
@@ -3,8 +3,21 @@
 
 .page-login {
   .login {
-      display: block;
-      justify-items: center;
+    margin-inline: auto;
+    background-color: var(--background-section);
+    padding-inline: functions.spacing(xs);
+    border: var(--border-width) solid var(--border-base);
+    box-shadow: var(--shadow-md);
+    border-radius: var(--border-radius-lg);
+    max-width: auto;
+
+    @include mixins.respond-up(sm) {
+      padding-inline: functions.spacing(lg);
+      max-width: fit-content;
+    }
+
+    display: block;
+
     h2 {
       text-align: center;
       margin-bottom: 1.5rem;
@@ -15,14 +28,14 @@
     min-width: 100%;
 
     @include mixins.respond-up(sm) {
-        min-width: 70%;
-      }
+      min-width: 70%;
+    }
     @include mixins.respond-up(md) {
-        min-width: 50%;
-      }
+      min-width: 50%;
+    }
     @include mixins.respond-up(lg) {
-        min-width: 30%;
-      }
+      min-width: 30%;
+    }
   }
 
   input,
@@ -30,7 +43,7 @@
     margin-bottom: 1rem;
     width: 100%;
   }
-  input{
+  input {
     min-height: 35px;
   }
   input[type="text"],
@@ -49,8 +62,8 @@
   label.remember {
     display: flex;
     align-items: center;
-    gap: .75rem;
-    margin-top: .5rem;
+    gap: 0.75rem;
+    margin-top: 0.5rem;
     margin-bottom: 1.5rem;
     font-weight: 600; // albo normal, jak wolisz
   }
