--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -61,6 +61,7 @@
       list-style: disc;
       padding-left: 1.2rem;
       margin-left: 0;
+      padding-bottom: var(--spacing-xs);
 
       @include mixins.respond-up(md) {
         margin-left: var(--spacing-lg);
@@ -87,6 +88,7 @@
       list-style: decimal;
       padding-left: 1.2rem;
       margin-left: 0;
+      padding-bottom: var(--spacing-xs);
 
       @include mixins.respond-up(md) {
         margin-left: var(--spacing-lg);
@@ -126,6 +128,7 @@
       list-style: disc;
       padding-left: 1.2rem;
       margin-left: 0;
+      padding-bottom: var(--spacing-xs);
 
       @include mixins.respond-up(md) {
         margin-left: var(--spacing-lg);
